--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "wavesurfer.js": "^7.9.3",
     "recharts": "^2.15.1"
   },
   "devDependencies": {
